--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "cookie": "^0.5.0",
     "debug": "^4.3.4",
+    "dompurify": "^3.0.5",
     "embla-carousel": "^8.0.0-rc11",
     "embla-carousel-react": "^8.0.0-rc11",
     "jsonwebtoken": "^9.0.1",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
+    "@types/dompurify": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.2"
   }
 }
