--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "@supabase/supabase-js": "^2.33.1",
     "@types/node": "20.4.7",
     "@types/react": "^18.2.18",
     "@types/react-dom": "18.2.7",
