--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "embla-carousel": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.0.1",
+    "next": "^14.2.16",
     "postcss": "8.4.47",
     "prisma": "^5.21.1",
     "react": "18.3.1",
