--- a/package.json
+++ b/package.json
@@ -12,38 +12,39 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.21.1",
-    "@supabase/supabase-js": "^2.45.6",
-    "@types/node": "22.7.9",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "18.3.1",
-    "autoprefixer": "10.4.20",
-    "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
-    "cookie": "^1.0.1",
-    "debug": "^4.3.7",
-    "dompurify": "^3.1.7",
-    "embla-carousel": "^8.3.0",
-    "embla-carousel-react": "^8.3.0",
+    "@prisma/client": "^6.8.2",
+    "@supabase/supabase-js": "^2.49.5",
+    "@types/node": "22.15.19",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "19.1.5",
+    "autoprefixer": "10.4.21",
+    "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "cookie": "^1.0.2",
+    "debug": "^4.4.1",
+    "dompurify": "^3.2.6",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "^14.2.16",
-    "postcss": "8.4.47",
-    "prisma": "^5.21.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-icons": "^5.3.0",
-    "supports-color": "^9.4.0",
-    "tailwindcss": "3.4.14",
+    "next": "^15.3.2",
+    "postcss": "8.5.3",
+    "prisma": "^6.8.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "supports-color": "^10.0.0",
+    "tailwindcss": "4.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "5.6.3",
-    "ws": "^8.18.0"
+    "typescript": "5.8.3",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
-    "@mermaid-js/mermaid-cli": "^11.2.1",
+    "@mermaid-js/mermaid-cli": "^11.4.2",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/bcrypt": "^5.0.2",
-    "@types/cookie": "^0.6.0",
-    "@types/dompurify": "^3.0.5",
-    "@types/jsonwebtoken": "^9.0.7",
-    "prisma-erd-generator": "^1.2.5"
+    "@types/cookie": "^1.0.0",
+    "@types/dompurify": "^3.2.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "prisma-erd-generator": "^2.0.4"
   }
 }
